--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   video_player: ^2.5.1
-  ffmpeg_kit_flutter: 5.1.0-LTS
+  ffmpeg_kit_flutter_min_gpl: ^5.1.0-LTS
   video_compress: ^3.1.2
   path_provider: ^2.0.12
   intl: ^0.18.0
