--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.18.0
   path: ^1.8.3
   transparent_image: ^2.0.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_lints: ^2.0.1
