--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,23 +3,23 @@ description: A Flutter package for trimming videos. This supports retrieving, tr
 version: 2.1.1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: ^3.6.0
 
 dependencies:
   flutter:
     sdk: flutter
 
-  video_player: ^2.5.1
-  ffmpeg_kit_flutter_min_gpl: ^5.1.0
-  video_compress: ^3.1.2
-  path_provider: ^2.0.12
-  intl: ^0.18.0
-  path: ^1.8.3
-  transparent_image: ^2.0.0
-  uuid: ^3.0.4
+  video_player: ^2.9.2
+  ffmpeg_kit_flutter_min_gpl: ^6.0.3
+  video_compress: ^3.1.3
+  path_provider: ^2.1.5
+  intl: ^0.20.1
+  path: ^1.9.1
+  transparent_image: ^2.0.1
+  uuid: ^4.5.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
-  lints: ^2.0.1
+  flutter_lints: ^5.0.0
+  lints: ^5.1.1
 
 flutter:
